<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ago.agodrone.fragments.ConfiguracaoDetalheFragment">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvIdConfiguracao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/configuracao_detail_id" />

            <TextView
                android:id="@+id/etIdConfiguracao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvChave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/configuracao_detail_chave" />

            <EditText
                android:id="@+id/etChave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10">
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvValor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/configuracao_detail_valor" />

            <EditText
                android:id="@+id/etValor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10">
            </EditText>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>